Update chaining-jobs.yml so job 2 passes

--- a/.github/workflows/chaining-jobs.yml
+++ b/.github/workflows/chaining-jobs.yml
@@ -27,8 +27,8 @@ jobs:
     steps:
       - name: Output for Job 2
         run: echo "Hello from Job 2"
-      - name: Make Job 2 Fail
-        run: exit 1
+      #- name: Make Job 2 Fail
+      #  run: exit 1
 
   job-3:
     name: Job 3
